<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ecran 1 -->    
    <string name="app_name">Tournament Builder 2014</string>
	    <string name="gerer_joueur">Gestion de joueurs</string>
	    
	    		<string name="creer_joueur">Créer un joueur</string>
	    		<string name="title_creer_joueur">Création de joueurs</string>
	    		<string name="boutonAvatar">Avatar</string>
	    			    		
	    		
    			<string name="modifier_joueur">Modifier un joueur</string>    			
    			<string name="title_modifier_joueur">Modification de joueurs</string>
    			
    			<string name="lister_joueurs">Lister les joueurs</string>    			
    			<string name="title_lister_joueurs">Liste des joueurs</string>
    			
        <string name="gerer_tournoi">Gestion de tournois</string>
        		<string name="creer_tournoi">Créer un tournoi</string>
        		<string name="tournoi_encours">Gestion des tournois en cours</string>
        <string name="statistique">Statistiques</string>
        
      
        
       <!-- création de joueur --> 
    <string name="pseudo">Veuillez entrer votre pseudo : </string>
    <string name="pseudoHint">Tapez votre pseudo</string>
    <string name="boutonEnvoyer">envoyer</string>
        
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    
</resources>
