<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#efebef">

    <ImageView
        android:id="@+id/logo_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:src="@drawable/logo_accueil"
        android:background="@android:color/transparent"/>
    

    <Button
        android:id="@+id/BTN_gererTournoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/normal_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:text="@string/gerer_tournoi" />
    
    <Button
        android:id="@+id/BTN_gererJoueur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/normal_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:text="@string/gerer_joueur" />
    
     <Button
        android:id="@+id/BTN_statistiques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/normal_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:text="@string/statistique" />
    

</LinearLayout>